--- a/tasks/.tko/repository.yaml
+++ b/tasks/.tko/repository.yaml
@@ -12,7 +12,7 @@ sources:
   type: clone
   branch: master
   cache_path: ''
-  cache_timestamp: '2025-12-03 11:03:34'
+  cache_timestamp: '2025-12-03 13:34:05'
   filters:
   - crud
 expanded:
@@ -26,4 +26,4 @@ flags:
   graph: 1
   xray: 0
 lang: py
-selected: poo@contato
+selected: poo@agenda
